k8s/deployment-frontend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cortex-nids-frontend
  namespace: default
  labels:
    app: cortex-nids-frontend
spec:
  replicas: 2
  selector:
    matchLabels:
      app: cortex-nids-frontend
  template:
    metadata:
      labels:
        app: cortex-nids-frontend
    spec:
      containers:
        - name: frontend
          image: cortex-nids-frontend:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 80
          resources:
            requests:
              memory: "128Mi"
              cpu: "100m"
            limits:
              memory: "512Mi"
              cpu: "500m"
