k8s/service-backend.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend
  namespace: default
spec:
  type: ClusterIP
  selector:
    app: cortex-nids-backend
  ports:
    - port: 8000
      targetPort: 8000
