k8s/service-frontend.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend
  namespace: default
spec:
  type: NodePort
  selector:
    app: cortex-nids-frontend
  ports:
    - port: 80
      targetPort: 80
      nodePort: 30080
